--- a/app/views/users/feedbacks.html.erb
+++ b/app/views/users/feedbacks.html.erb
@@ -1,21 +1,39 @@
 
 <h1><%= @user.username %>'s Feedback</h1>
 
-<h4>Feedback:</h4>
 
+<h2><%= @user.username %>'s feedback as the seller</h2>
 <table>
   <tr>
     <th>Rating</th>
     <th>Review</th>
     <th>User</th>
-    <th>Time</th>
+    <th>Date</th>
   </tr>
   <% @user.feedbacks.each do |i| %>
   <tr>
     <td><%= i.rating %></td>
     <td><%= i.content %></td>
     <td><%= link_to User.find(i.reviewer_id).username, User.find(i.reviewer_id) %></td>
-    <td><%= i.created_at %></td>
+    <td><%= i.display_time %></td>
+  </tr>
+  <% end %>
+</table>
+
+<h2><%= @user.username %>'s feedback as the buyer</h2>
+<table>
+  <tr>
+    <th>Rating</th>
+    <th>Review</th>
+    <th>User</th>
+    <th>Date</th>
+  </tr>
+  <% @user.feedbacks.each do |i| %>
+  <tr>
+    <td><%= i.rating %></td>
+    <td><%= i.content %></td>
+    <td><%= link_to User.find(i.reviewer_id).username, User.find(i.reviewer_id) %></td>
+    <td><%= i.display_time %></td>
   </tr>
   <% end %>
 </table>
