--- a/app/views/users/auction_histories.html.erb
+++ b/app/views/users/auction_histories.html.erb
@@ -1,9 +1,7 @@
 
-<h1>Auction History</h1>
+<h1><%= "#{@user.username}'s Auction History" %></h1>
 
-<aside>
-  <%= link_to "-click here-", user_auctions_path %> to view active auctions
-</aside><br>
+
 
 <table>
   <tr>
@@ -17,15 +15,19 @@
   <% @user.user_history.each do |i| %>
   <tr>
     <td><%= link_to i.title, auction_path(i) %></td>
-    <td><%= i.car.make %>/<%= i.car.model %></td>
+    <td><%= i.car.display %></td>
     <% if @user.seller_auctions.include?(i) %>
       <td>Seller</td>
     <% else %>
       <td>Buyer</td>
     <% end %>
     <td>$<%= number_with_delimiter(i.top_bid) %></td>
-    <td><%= i.clean_datetime(i.end_time) %></td>
+    <td><%= i.display_end_date %></td>
     <td><%= link_to "Details", auction_transaction_path(i) %></td>
   </tr>
   <% end %>
 </table>
+<br>
+<aside>
+  <h3><%= link_to "View Active Auctions", user_auctions_path %></h3>
+</aside>
