--- a/app/views/users/auctions.html.erb
+++ b/app/views/users/auctions.html.erb
@@ -1,8 +1,8 @@
 
-<h1>My Auctions</h1>
+<h1><%= "#{@user.username}'s Auctions" %></h1>
 
 <div id="active_buyer_auctions">
-  <h3>Buying: </h3>
+  <h2>Buying</h2>
 
   <table>
     <tr>
@@ -11,23 +11,23 @@
       <th>Seller</th>
       <th>Top Bid</th>
       <th>Bids Made</th>
-      <th>Auction Status</th>
+      <th>Auction End Time (UTC)</th>
     </tr>
     <% @user.active_buyer_auctions.each do |i| %>
       <tr>
         <td><%= link_to i.title, auction_path(i) %></td>
-        <td><%= i.car.make %>/<%= i.car.model %></td>
+        <td><%= i.car.display %></td>
         <td><%= link_to i.seller.username, i.seller %>
         <td><%= i.top_bid %></td>
         <td><%= i.count_bids %></td>
-        <td><%= "Auction ends: ..." %>
+        <td><%= "#{i.clean_datetime(i.end_time)}" %>
       </tr>
     <% end %>
   </table>
 </div>
 
 <div id="active_seller_auctions">
-  <h4>Selling: </h4>
+  <h2>Selling</h2>
 
   <table>
     <tr>
@@ -36,20 +36,20 @@
       <th>Top Bid</th>
       <th>Bids Made</th>
       <th>Leading Bidder</th>
-      <th>Auction Status</th>
+      <th>Auction End Time (UTC)</th>
     </tr>
     <% @user.active_seller_auctions.each do |i| %>
       <tr>
         <td><%= link_to i.title, auction_path(i) %></td>
-        <td><%= i.car.make %>/<%= i.car.model %></td>
-        <td><%= i.top_bid %></td>
+        <td><%= i.car.display %></td>
+        <td>$<%= number_with_delimiter(i.top_bid) %></td>
         <td><%= i.count_bids %></td>
         <% if !i.all_auction_bids.empty? %>
-          <td><%= link_to i.auction_winner, i.auction_winner %></td>
+          <td><%= link_to i.auction_winner.username, i.auction_winner %></td>
         <% else %>
           <td><%= "None" %></td>
         <% end %>
-        <td><%= "Auction ends: #{i.clean_datetime(i.end_time)}" %>
+        <td><%= "#{i.clean_datetime(i.end_time)}" %>
       </tr>
     <% end %>
   </table>
