--- a/app/views/auctions/transactions.html.erb
+++ b/app/views/auctions/transactions.html.erb
@@ -24,7 +24,7 @@
 
 <% if @auction.seller == logged_user %>
   You <%= logged_user.username %> are the seller <br>
-  <% @review = logged_user.reviews.find{|i| i.auction_id = @auction.id} %>
+  <% @review = logged_user.reviews.find{|i| i.auction_id == @auction.id} %>
   <% if !@review %>
     <%= form_tag ({controller: 'feedbacks', action: 'create', method: 'post'}) do %>
       Rating: <input name="rating" type="number">
