pics working but not finished.

--- a/app/views/auctions/transactions.html.erb
+++ b/app/views/auctions/transactions.html.erb
@@ -1,7 +1,7 @@
 
 <h1>Transaction Information</h1>
 
-<h2><%= @auction.title %></h2>
+<h2 class="listing_title"><%= @auction.title %></h2>
 
 <table>
   <tr>
