--- a/app/views/users/cars.html.erb
+++ b/app/views/users/cars.html.erb
@@ -11,11 +11,11 @@
     <th>Make and Model</th>
     <th>Color</th>
     <th>Year</th>
-    <th>Mileage</th>    
+    <th>Mileage</th>
   </tr>
   <% @user.cars.each do |car| %>
   <tr>
-    <td><%= (image_tag(car.avatar.variant(resize: "300x300"))) if car.avatar.attached? == true %></td>
+    <td><%= link_to (image_tag(car.avatar.variant(resize: "300x300"))), car_path(car) if car.avatar.attached? == true %></td>
     <td><%= car.display %></td>
     <td><%= car.color %></td>
     <td><%= car.year %></td>
@@ -23,14 +23,3 @@
   </tr>
   <% end %>
 </table>
-
-
- <% @user.cars.each do |car| %>
-     <% car.images.each do |image| %>
-        <%= image_tag(rails_blob_path(image)) %>
-     <% end %>
- <% end %>
-<br>
- <% @user.cars.each do |car| %>
-     <%= "car: #{car.model} num images: #{car.images.count}" %><br>
- <% end %>
