--- a/app/views/users/feedbacks.html.erb
+++ b/app/views/users/feedbacks.html.erb
@@ -1,26 +1,8 @@
 
 <h1><%= @user.username %>'s Feedback</h1>
 
+<h2 class="listing_title">BucketScore: <%= @user.average_rating %></h2>
 
-<h2><%= @user.username %>'s feedback as the seller</h2>
-<table>
-  <tr>
-    <th>Rating</th>
-    <th>Review</th>
-    <th>User</th>
-    <th>Date</th>
-  </tr>
-  <% @user.feedbacks.each do |i| %>
-  <tr>
-    <td><%= i.rating %></td>
-    <td><%= i.content %></td>
-    <td><%= link_to User.find(i.reviewer_id).username, User.find(i.reviewer_id) %></td>
-    <td><%= i.display_time %></td>
-  </tr>
-  <% end %>
-</table>
-
-<h2><%= @user.username %>'s feedback as the buyer</h2>
 <table>
   <tr>
     <th>Rating</th>
