added seed data

--- a/app/views/cars/show.html.erb
+++ b/app/views/cars/show.html.erb
@@ -11,4 +11,6 @@ images:<br>
     <% end %>
   <% end %>
 
-<h3><%= link_to "Edit this car", edit_car_path(@car) %></h3>
+<% if logged_user.id == @car.user_id %>
+  <h3><%= link_to "Edit this car", edit_car_path(@car) %></h3>
+<% end %>
