--- a/app/views/cars/show.html.erb
+++ b/app/views/cars/show.html.erb
@@ -1,24 +1,24 @@
 <h1><%= "#{@car.user.username}'s #{@car.year} #{@car.display}" %></h1>
 <%= (@car.avatar.attached?) ? (image_tag(@car.avatar.variant(resize: "300x300"))) : image_tag('/assets/placeholders/towing.gif') %><br>
 
-
-
-images:<br>
+<h3> Make: <%= @car.make %></h3>
+<h3> Model: <%= @car.model %></h3>
+<h3> Color: <%= @car.color %></h3>
+<h3> Year: <%= @car.year %></h3>
+<h3> Mileage: <%= @car.mileage %></h3>
+<br><br>
+<h2>Images<br></h2>
 <div class="images clearfix">
 
 
 <% if @car.images.attached? == true  %>
     <% @car.images.each do |image| %>
-
-
-
        <%= image_tag(image.variant(resize: "400x400")) %>
-
-
     <% end %>
   <% end %>
 
 </div>
+
 <% if logged_user.id == @car.user_id %>
-  <h3><%= link_to "Edit this car", edit_car_path(@car) %></h3>
+  <br><br><h3><%= link_to "Edit this car", edit_car_path(@car) %></h3>
 <% end %>
