fixed image path for heroku

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -21,7 +21,7 @@
 }
 
  body {
-  background-image: url('/assets/background/wallpaper_chaser.jpg');
+  background-image: url(<%= assets_path 'wallpaper_chaser.jpg' %>);
   background-attachment: fixed;
 }
 
